# TeenyChat

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requiriments.txt  test.py  users.db
src/: main.py
src/assets/: database.db
src/database/: __init__.py  database.py
src/models/: __init__.py  message.py
src/scripts/: chat_handeler.py  database_handeler.py  message_handeler.py
src/services/: __init__.py  message.py
src/ui/: __init__.py  main_ui.py
src/utils/: __init__.py  utils.py
